--- a/partials/widget-sendgrid.hbs
+++ b/partials/widget-sendgrid.hbs
@@ -1,6 +1,7 @@
 <div class="widget">
     <h3 class="title">{{t "Newsletter"}}</h3>
 	 <div class="newsletter input-group">
+    <p style="margin-bottom: 15px;">Are you into data to the point where it's almost embarrasing? Toss your email in for occasional, not-annoying updates!</p>
     {{#if @labs.subscribers}}
       <section class="gh-subscribe">
         {{subscribe_form
