--- a/partials/widget-newsletter.hbs
+++ b/partials/widget-newsletter.hbs
@@ -3,6 +3,7 @@
 	<h3 class="title">{{t "Newsletter"}}</h3>
 	<div class="content newsletter">
 		<div id="newsletter_signup">
+			<p>Are you into data science and engineering to the point where it's almost embarrasing? Considering tossing your name in for occasional not-annoying updates!</p>
 			<form action="#" method="post" id="newsletter-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
 				<div class="input-group">
 					<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter your email...">
