--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -417,6 +417,7 @@
 			letter-spacing: 1px;
 			margin-top: 0;
 			white-space: nowrap;
+			font-family: CompassSans-Medium,Gordita-Medium,serif;
 
 			@media(max-width: 1040px){
 				font-size: 1.3em;
@@ -437,7 +438,7 @@
 			font-family: 'Gordita-Regular', 'Gordita-Light', sans-serif;
 			transition: all 0.2s ease;
 			font-size: 15px !important;
-			font-weight: 500 !important;
+			font-weight: 600 !important;
 
 			&:hover {
 				cursor: pointer;
