--- a/post.hbs
+++ b/post.hbs
@@ -14,7 +14,7 @@
 				<article class="{{post_class}} post-page">
 					{{#if feature_image}}
 					<div class="featured-media">
-						<img src="{{feature_image}}" alt="{{{title}}}">
+						<img src="https://res.cloudinary.com/hackers-and-slackers/image/fetch/w_968,h_557,c_fit/{{feature_image}}" alt="{{{title}}}">
 					</div>
 					{{/if}}
 
