--- a/src/less/post.less
+++ b/src/less/post.less
@@ -822,6 +822,10 @@
 			@media(max-width: 600px) {
 				margin-bottom: -5px !important;
 			}
+
+			&:hover {
+				cursor: zoom-in;
+			}
 		}
 		@media(max-width: 600px) {
 			margin-left: calc(~"-50vw + 50%") !important;
