--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -7,7 +7,7 @@
 
   {{#if feature_image}}
         <a href="{{url}}" class="featured-media" href="{{url}}">
-          <div class="post-card-image" style="background-image: url(https://res.cloudinary.com/hackers-and-slackers/image/fetch/w_640,h_400,c_fit/{{img_url feature_image absolute="true"}})"></div>
+          <div class="post-card-image" style="background-image: url(https://res.cloudinary.com/hackers-and-slackers/image/fetch/w_640,h_400,c_fit{{img_url feature_image absolute="true"}})"></div>
         </a>
   {{/if}}
 
