--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -225,6 +225,12 @@
 		}
 
 		.newsletter {
+
+
+
+
+
+
 	input::placeholder {
 		color: grey;
 	}
@@ -558,6 +564,12 @@
 
 	.newsletter {
 		width: 100%;
+
+.news-description{
+		margin-bottom: 15px;
+		font-size: .85em;
+		line-height: 1.8;
+		}
 
 		.form-group {
 			width: 100%;
