--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -47,11 +47,16 @@
 		max-height: 400px;
 		height: 48vw;
 		display: block;
-		overflow: hidden;
 		margin: auto;
 		background-size: cover !important;
 		box-shadow: 0 0 8px rgba(93, 97, 140, .35);
 		transition: all .2s ease-out;
+
+		.post-card-image {
+			background-size: cover;
+			width:100%;
+			height:100%;
+		}
 
 		&:hover {
 			opacity: .7;
