--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -35,16 +35,17 @@
 	}
 
 	.newsletter {
-		padding: 13px 30px 0 0;
+		padding: 13px 40px 0 0;
 		input::placeholder {
 			color: grey;
 		}
 
 		.news-description {
 			margin-bottom: 15px;
-			font-size: 1em;
+			font-size: .9em;
 			line-height: 1.4;
 			text-align: justify;
+			margin-top: 0;
 		}
 
 		.btn {
@@ -133,7 +134,7 @@
 		.single-author-name {
 			font-size: 0.9em !important;
 
-			font-family: Gordita-Medium,sans-serif !important;
+			font-family: Gordita-Medium, sans-serif !important;
 		}
 
 		.role {
@@ -346,7 +347,7 @@
 					font-size: 0.95em;
 					margin: 0;
 					line-height: 1.4;
-					font-family: Gordita-Regular,sans-serif !important;
+					font-family: Gordita-Medium,sans-serif !important;
 					font-weight: 700;
 					display: block;
 
