--- a/src/less/global.less
+++ b/src/less/global.less
@@ -137,8 +137,16 @@ a {
 
 	&:hover {
 		color: @hover-color;
-		cursor: pointer;
+		cursor: pointer !important;
 	}
+}
+
+button:hover{
+	cursor: pointer !important;
+}
+
+input:hover {
+	cursor: text;
 }
 
 a img,
