--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -98,13 +98,13 @@
 	align-items: center;
 	justify-content: space-between;
 	width: auto;
-	max-height: 100px;
 	height: fit-content;
 
-	@media(max-width: 1000px){
-		padding:0 20px;
+	@media(max-width: 800px){
+		flex-direction: column;
 	}
 
+/*
 	.btn {
 		max-width: 37%;
 		line-height: 1.3;
@@ -155,5 +155,5 @@
 			height: 40px;
 			    width: 49%;
 		}
-	}
+	}*/
 }
