--- a/src/less/post.less
+++ b/src/less/post.less
@@ -865,7 +865,7 @@
 	.about-author {
 		background: @white;
 		padding: 40px 80px;
-		margin: 20px 0;
+		margin: 0 0 20px;
 		min-height: 88px;
 		box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
 		display: flex;
