--- a/partials/prev-next.hbs
+++ b/partials/prev-next.hbs
@@ -1,9 +1,8 @@
 <!-- start prev next wrap -->
-<div class="prev-next-wrap clearfix">
-		{{#next_post}}
-		<a class="btn btn-default" style="float:left;" href="{{url}}"><i class="fa fa-angle-left fa-fw"></i> {{title}}</a>
-		{{/next_post}}
-    {{#prev_post}}
-        <a class="btn btn-default" style="float:right;" href="{{url}}">{{title}} <i class="fa fa-angle-right fa-fw"></i></a>
-    {{/prev_post}}
+<div class="prev-next-wrap">
+	{{#get "posts" limit="3" include="tags" filter="id:-{{id}}+tag:{{primary_tag.slug}}"}}
+		{{#foreach posts}}
+			{{> article-preview}}
+			{{/foreach}}
+		{{/get}}
 </div>
