--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -4,7 +4,8 @@
 	sidebar
 ====================================================*/
 .sidebar {
-	 min-width: 300px;
+	min-width: 300px;
+
 	.search {
 		position: relative;
 
@@ -31,19 +32,19 @@
 			background: white;
 			align-items: center;
 			padding: 17px 5%;
-	    width: 90%;
-	    font-size: 1em;
-	    font-family: 'CompassSans-Light',Gordita-Light,sans-serif!important;
-	    font-weight: 200;
-	    -webkit-transition: .3s all;
-	    transition: .3s all;
-	    outline: 0;
-	    -webkit-appearance: none;
-	    border: 1px solid #eaeaea;
-	    border-radius: 2px;
+			width: 90%;
+			font-size: 1em;
+			font-family: 'CompassSans-Light',Gordita-Light,sans-serif!important;
+			font-weight: 200;
+			-webkit-transition: 0.3s all;
+			transition: 0.3s all;
+			outline: 0;
+			-webkit-appearance: none;
+			border: 1px solid #eaeaea;
+			border-radius: 2px;
 
 			&::placeholder {
-				color: #9A9AB1;
+				color: #828294;
 			}
 
 			&:hover {
@@ -72,7 +73,7 @@
 		-webkit-appearance: none;
 		border: 1px solid #cfd3e0;
 		border-radius: 2px;
-		border-top:0;
+		border-top: 0;
 
 		* {
 			transition: 0.3s all;
@@ -84,7 +85,7 @@
 			text-align: left;
 			display: flex;
 			justify-content: space-between;
-      background: #fff;
+			background: #fff;
 
 			&:nth-child(even) {
 				background: #f5f8fb;
@@ -151,23 +152,23 @@
 		a {
 			border: 0;
 			padding: 7px 12px;
-			color: #3c668a;
+			color: #234969;
 			line-height: 1.5em;
 			display: inline-block;
 			margin: 0 10px 10px 0;
-			font-size: .8em !important;
+			font-size: 0.8em !important;
 			-webkit-transition: all 0.2s ease;
 			-moz-transition: all 0.2s ease;
 			-ms-transition: all 0.2s ease;
 			-o-transition: all 0.2s ease;
 			transition: all 0.2s ease;
-			background: #d4e5f7;
+			background: #daecff;
+			font-family: Gordita-Regular;
 			flex-grow: 1;
-			 text-align: center;
+			text-align: center;
 			.transition(all 0.2s ease);
-      transition: all .2s ease;
-      box-shadow: 1px 1px 0 #c8d3e2;
-
+			transition: all 0.2s ease;
+			box-shadow: 1px 1px 0 #c8d3e2;
 			@media(max-width: 1000px) {
 				font-size: 0.77em !important;
 				margin: 0 5px 5px 0;
@@ -188,8 +189,6 @@
 		&:first-of-type {
 			padding-top: 0;
 			margin-right: 0;
-
-
 		}
 
 		.social-btns {
@@ -225,86 +224,80 @@
 		}
 
 		.newsletter {
+			input::placeholder {
+				color: #828294;
+			}
 
+			.form-group {
+				position: relative;
 
+				&::after {
+					content: '\f0e0';
+					font-family: "Font Awesome 5 Pro";
+					font-weight: 100;
+					display: inline-block;
+					font-style: normal;
+					-webkit-font-feature-settings: normal;
+					font-feature-settings: normal;
+					font-variant: normal;
+					text-rendering: auto;
+					-webkit-font-smoothing: antialiased;
+					right: 17px;
+					top: 11px;
+					position: absolute;
+					color: #9aa1bd;
+					font-size: 1.1em;
+				}
+			}
 
+			button {
+				width: 100%;
+				background: linear-gradient(165deg,#40a2a2,#1f68a7);
+				padding: 13px 20px;
+				font-size: 16px;
+				color: white;
+				border: 0;
+				text-transform: Uppercase;
+				transition: all 0.3s easeout;
 
+				span {
+					font-size: 14px;
+				}
 
+				&:hover {
+					background: @hover-color;
+				}
+			}
 
-	input::placeholder {
-		color: grey;
-	}
+			input {
+				font-weight: 100;
+				border: 1px solid #d5dbe6;
+				transition: all 0.3s all;
 
-	.form-group {
-		position: relative;
+				&::placeholder {
+					opacity: 0.85;
+				}
 
-		&::after {
-			content: '\f0e0';
-			font-family: "Font Awesome 5 Pro";
-			font-weight: 100;
-			display: inline-block;
-			font-style: normal;
-			-webkit-font-feature-settings: normal;
-			font-feature-settings: normal;
-			font-variant: normal;
-			text-rendering: auto;
-			-webkit-font-smoothing: antialiased;
-			right: 17px;
-			top: 11px;
-			position: absolute;
-			color: #9aa1bd;
-			font-size: 1.1em;
-		}
-	}
+				&:hover {
+					background: #e5f9ff;
+					border-color: #bbd8e2;
 
-	button {
-		width: 100%;
-		background: linear-gradient(165deg,#40a2a2,#1f68a7);
-		padding: 13px 20px;
-		font-size: 16px;
-		color: white;
-		border: 0;
-		text-transform: Uppercase;
-		transition: all 0.3s easeout;
+					&::placeholder {
+						opacity: 0.1;
+					}
+				}
 
-		span {
-			font-size: 14px;
-		}
+				&:focus {
+					background: white;
+				}
+			}
 
-		&:hover {
-			background: @hover-color;
-		}
-	}
-
-	input {
-		font-weight: 100;
-		border: 1px solid #d5dbe6;
-		transition: all 0.3s all;
-
-		&::placeholder {
-			opacity: 0.7;
-		}
-
-		&:hover {
-			background: #e5f9ff;
-			border-color: #bbd8e2;
-
-			&::placeholder {
-				opacity: 0.1;
+			.gh-subscribe-rss {
+				padding-top: 10px;
+				display: block;
+				text-align: right;
 			}
 		}
-
-		&:focus {
-			background: white;
-		}
-	}
-
-	.gh-subscribe-rss {
-		padding-top: 10px;
-		display: block;
-		text-align: right;
-	}
-}
 
 		&.series {
 			.post-title {
@@ -325,12 +318,11 @@
 				display: inline-block;
 				align-items: center;
 				display: flex;
-				padding: 0 0 12px!important;
+				padding: 0 0 12px!important !important;
 
 				&:last-of-type {
 					border-bottom: 0;
 				}
-
 			}
 
 			.series-image {
@@ -346,12 +338,12 @@
 				}
 			}
 
-      .series-info{
-        @media(max-width: 1000px) {
-          padding: 5px 15px;
-          background: 0;
-        }
-      }
+			.series-info {
+				@media(max-width: 1000px) {
+					padding: 5px 15px;
+					background: 0;
+				}
+			}
 
 			& > a {
 				display: none;
@@ -365,7 +357,6 @@
 
 			.recent-single-post {
 				padding: 0;
-
 
 				&:nth-of-type(1) {
 					display: none;
@@ -422,8 +413,7 @@
 			margin-top: 0;
 			white-space: nowrap;
 			font-family: CompassSans-Medium,Gordita-Medium,serif;
-
-			@media(max-width: 1040px){
+			@media(max-width: 1040px) {
 				font-size: 1.3em;
 			}
 		}
@@ -460,7 +450,7 @@
 		margin-bottom: 15px;
 		text-transform: uppercase;
 		font-size: 1.5em;
-		font-family: CompassSans-Regular,Gordita-Medium,serif;
+		font-family: HackerSans-Medium,Gordita-Medium,serif;
 		color: @header-color;
 		font-weight: 500;
 	}
@@ -470,7 +460,7 @@
 		font-weight: 500;
 		margin-bottom: 8px;
 		text-transform: uppercase;
-		font-family: CompassSans-Regular,Gordita-Medium,serif;
+		font-family: CompassSans-Medium,Gordita-Medium,serif;
 		letter-spacing: 2px;
 		color: #1f5373;
 	}
@@ -528,6 +518,7 @@
 			padding-bottom: 17px;
 			margin-bottom: 17px;
 			line-height: 1.35;
+			padding: 0 10px 10px;
 
 			.post-title,
 			.single-author-name {
@@ -564,17 +555,16 @@
 
 	.newsletter {
 		width: 100%;
+		padding-top: 0 !important;
 
-.news-description{
-		margin-bottom: 15px;
-		font-size: .85em;
-		line-height: 1.8;
+		.news-description {
+			margin-bottom: 15px;
+			font-size: 0.85em;
+			line-height: 1.8;
 		}
 
 		.form-group {
 			width: 100%;
-
-
 		}
 
 		.subscribe-email {
