--- a/partials/widget-tagcloud.hbs
+++ b/partials/widget-tagcloud.hbs
@@ -1,5 +1,5 @@
 <!-- start tag cloud widget -->
-<div class="widget">
+<div class="widget tag">
 	<h4 class="title">Tags</h4>
 	<div class="tag-cloud tag">
 		{{#get "tags" limit="all" filter="slug:-[roundup,machine-learning,django,graph-databases,science-news,cybersecurity,blockchain,aws-api,kanban,codesnippetcorner,statistics,tableau-hacks]" include="count.posts" order="count.posts DESC" }}
