--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -87,7 +87,7 @@
 			}
 			@media(max-width:600px) {
       	padding: 9px 11px!important;
-
+				    height: 30px;
 			}
 
 			&.facebook {
@@ -172,7 +172,7 @@
 					}
 
 				@media(max-width: 600px) {
-					font-size: 30px;
+					font-size: 35px;
 					margin: 0!important;
 					opacity: .8;
 				}
