--- a/src/less/article-preview.less
+++ b/src/less/article-preview.less
@@ -5,7 +5,7 @@
   max-width: 32%;
   transition: all .3s ease-out;
   position: relative;
-  height:300px;
+  height: 300px !important;
   box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
 
   @media(max-width: 800px){
@@ -38,6 +38,7 @@
     @media(max-width: 800px){
       width:35%;
       height:100%;
+      min-width: 160px;
     }
   }
 
@@ -52,16 +53,24 @@
     color:@text-color;
 
     p {
-      font-size: .9em;
+      font-size: .85em;
       line-height: 1.5;
       text-align: left;
       font-weight: 600;
       position: absolute;
       bottom: 10px;
+      margin: 5px 0 10px;
+      width: auto;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      display: -webkit-box;
+      text-overflow: ellipsis;
 
       @media(max-width: 800px){
         font-size: .8em;
         margin: 5px 0 5px;
+        display: -webkit-box;
       }
     }
   }
