--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -226,10 +226,10 @@
 
 			a {
 				color: #fff;
-		    font-family: 'CompassSans-Medium',serif;
+		    font-family: HackerSans-Medium,serif;
 		    text-transform: uppercase;
 				font-size: 16px;
-				font-weight: 300;
+				font-weight: 600;
 		    letter-spacing: .5px;
 		    transition: all .1s ease-out;
 				@media(max-width: 800px) {
