we stylin on dese fools

--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -57,9 +57,9 @@
 
 		.btn {
 			width: 100%;
-			background: linear-gradient(165deg,#40a2a2,#1f68a7);
+			background: #27c6b5;
 			padding: 13px 20px;
-			font-size: 16px;
+			font-size: 17px;
 			color: #fff;
 			border: 0;
 			text-transform: Uppercase;
@@ -151,7 +151,7 @@
 
 	.widget {
 		padding: 10px 0;
-		width: 30%;
+		width: 28%;
 		margin: 0;
 
 		.about-title {
@@ -159,7 +159,6 @@
 		}
 		@media(max-width: 800px) {
 			padding: 0;
-			width: 30%;
 			margin: 10px 10px 60px;
 		}
 		@media(max-width: 600px) {
@@ -174,11 +173,11 @@
 		.title {
 			color: @white;
 			font-weight: 800;
-			margin: 10px 0 25px !important;
+			margin: 10px 0 15px !important;
 			font-size: 1.5em;
 			@media(max-width: 600px) {
 				margin: 10px 0 30px!important !important;
-				font-size: 1.6em;
+				font-size: 1.3em;
 			}
 		}
 
@@ -225,7 +224,7 @@
 				font-weight: 200;
 				font-family: 'CompassSans-Medium', serif;
 				transition: all 0.2s ease;
-				border-bottom: 1px dashed rgba(255,255,255,.1) !important;
+				border-bottom: 1px dashed rgba(53, 37, 68, 0.29) !important;
 
 				&:last-child {
 					border-bottom: none !important;
@@ -296,7 +295,7 @@
 
 				button {
 					width: 100%;
-					background: linear-gradient(165deg,#40a2a2,#1f68a7);
+					background: #27c6b5;
 					padding: 13px 20px;
 					font-size: 16px;
 					color: white;
