--- a/src/less/article-preview.less
+++ b/src/less/article-preview.less
@@ -53,14 +53,14 @@
     color:@text-color;
 
     p {
-      font-size: .85em;
-      line-height: 1.5;
+      font-size: .8em;
+      line-height: 1.4;
       text-align: left;
-      font-weight: 600;
+      font-weight: 500;
       position: absolute;
       bottom: 10px;
       margin: 5px 0 10px;
-      width: auto;
+      width: 91%;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
