related post widgets

--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -91,9 +91,6 @@
 
 	.post-head {
 		margin: 0 0 20px;
-		@media(max-width: 600px) {
-			margin: 0 0 10px;
-		}
 
 		.post-title {
 			font-size: 2.2em;
@@ -349,7 +346,7 @@
 .content {
 	padding: 20px 30px;
 	@media(max-width: 600px) {
-		 padding: 15px 20px;
+		 padding: 25px;
 	}
 }
 
