--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -57,7 +57,7 @@
 
 		.btn {
 			width: 100%;
-			background: #27c6b5;
+			background: #14b5a4;
 			padding: 13px 20px;
 			font-size: 17px;
 			color: #fff;
