--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -42,6 +42,7 @@
 			font-size: .9em;
 			font-weight: 500;
 			color: #2d2f35;
+			display:none;
 			@media(max-width: 600px) {
 				font-size: 0.9em;
 				line-height: 1.6em;
@@ -56,11 +57,12 @@
 
 	.featured-media {
 		box-sizing: border-box;
-		max-height: 400px;
+		max-height: 350px;
 		height: 48vw;
 		display: block;
 		margin: auto;
 		background-size: cover !important;
+		background-position-y: center;
 		box-shadow: 0 0 8px rgba(93, 97, 140, .35);
 		transition: all .2s ease-out;
 
