--- a/src/less/article-preview.less
+++ b/src/less/article-preview.less
@@ -3,12 +3,11 @@
 .article-preview {
   background: white;
   max-width: 32%;
-  transition: all .3s ease-out;
+  transition: all 0.3s ease-out;
   position: relative;
   height: 300px !important;
   box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
-
-  @media(max-width: 800px){
+  @media(max-width: 800px) {
     margin: 5px 30px;
     width: -webkit-fill-available;
     max-width: none;
@@ -17,27 +16,26 @@
     border-bottom: 2px solid #dcdcdc!important;
 
     a {
-      display:flex;
+      display: flex;
       justify-content: space-between;
       flex-direction: row;
       height: 100%;
     }
-	}
+  }
 
-  &:hover{
+  &:hover {
     cursor: pointer !important;
     background: #c3dbea;
   }
 
   .img-wrapper {
-    width:100%;
-    height:50%;
+    width: 100%;
+    height: 50%;
     background-size: cover;
     background-position: center;
-
-    @media(max-width: 800px){
-      width:35%;
-      height:100%;
+    @media(max-width: 800px) {
+      width: 35%;
+      height: 100%;
       min-width: 160px;
     }
   }
@@ -48,12 +46,62 @@
     margin-top: 0 !important;
   }
 
+  .author-mobile {
+    margin-top: 15px;
+    align-items: center;
+    width: 40%;
+    display: flex;
+
+    img {
+      width: 40px;
+      height: 40px;
+      margin-right: 10px;
+    }
+  }
+
+  .author-mobile {
+    align-items: center;
+
+    .info {
+      span {
+        font-family: 'CompassSans-Regular','Gordita-Regular', 'Gordita-Light' !important;
+        color: #627d90;
+        line-height: 1;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        display: block;
+      }
+
+      .mobile-name {
+        font-weight: 600;
+        margin-bottom: 3px;
+        font-size: 1em;
+      }
+
+      .mobile-date {
+        font-size: 0.85em;
+      }
+    }
+
+    span {
+      text-transform: capitalize;
+      line-height: 1;
+      font-size: 1em;
+      font-family: 'CompassSans-Regular','Gordita-Medium';
+      color: #224a69;
+    }
+    @media (max-width: 800px) {
+      display: flex;
+    }
+  }
+
   .description {
     padding: 20px;
-    color:@text-color;
+    color: @text-color;
 
     p {
-      font-size: .8em;
+      font-size: 0.8em;
       line-height: 1.4;
       text-align: left;
       font-weight: 500;
@@ -66,10 +114,9 @@
       overflow: hidden;
       display: -webkit-box;
       text-overflow: ellipsis;
-
-      @media(max-width: 800px){
-        font-size: .8em;
-        margin: 5px 0 5px;
+      @media(max-width: 800px) {
+        font-size: 0.8em;
+        margin: 5px 0;
         display: -webkit-box;
       }
     }
