post layout changes

--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -101,7 +101,12 @@
 	height: fit-content;
 
 	@media(max-width: 800px){
+		padding: 0 15px;
+	}
+
+	@media(max-width: 600px){
 		flex-direction: column;
+		padding: 0;
 	}
 
 /*
