--- a/partials/article-preview.hbs
+++ b/partials/article-preview.hbs
@@ -1,11 +1,11 @@
+<a href="{{url}}">
 <div class="article-preview" style="height: 300px;">
-  <a href="{{url}}">
     <div class="img-wrapper " style="background-image: url({{img_url feature_image absolute="true"}});"></div>
     <div class="description">
       <h5 class="related-title">{{title}}</h5>
       {{#primary_author}}
         {{#if profile_image}}
-          <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div></a>
+          <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMMM DD"}}</span></div></a>
         {{/if}}
       {{/primary_author}}
     </div>
