--- a/src/less/article-preview.less
+++ b/src/less/article-preview.less
@@ -7,19 +7,25 @@
   position: relative;
   height: 300px !important;
   box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
-  @media(max-width: 800px) {
+  @media(max-width: 600px) {
     margin: 5px 30px;
     width: -webkit-fill-available;
     max-width: none;
     height: 150px !important;
     border-right: 2px solid #dcdcdc!important;
     border-bottom: 2px solid #dcdcdc!important;
+    display: flex;
 
     a {
       display: flex;
       justify-content: space-between;
       flex-direction: row;
       height: 100%;
+
+
+      @media(max-width: 600px) {
+        height: auto;
+      }
     }
   }
 
@@ -33,7 +39,7 @@
     height: 50%;
     background-size: cover;
     background-position: center;
-    @media(max-width: 800px) {
+    @media(max-width: 600px) {
       width: 35%;
       height: 100%;
       min-width: 160px;
@@ -41,21 +47,25 @@
   }
 
   .related-title {
-    line-height: 1.3 !important;
-    font-size: 1.2em !important;
+    line-height: 1.2 !important;
+    font-size: 1.1em !important;
     margin-top: 0 !important;
   }
 
   .author-mobile {
     margin-top: 15px;
     align-items: center;
-    width: 40%;
+    width: 106px;
     display: flex;
 
     img {
-      width: 40px;
-      height: 40px;
+      width: 50px;
+      height: 50px;
       margin-right: 10px;
+
+      @media(max-width: 600px) {
+        height: auto;
+      }
     }
   }
 
@@ -63,6 +73,7 @@
     align-items: center;
 
     .info {
+      position: relative;
       span {
         font-family: 'CompassSans-Regular','Gordita-Regular', 'Gordita-Light' !important;
         color: #627d90;
@@ -75,8 +86,8 @@
 
       .mobile-name {
         font-weight: 600;
-        margin-bottom: 3px;
-        font-size: 1em;
+        margin-bottom: 5px;
+        font-size: 1.2em;
       }
 
       .mobile-date {
@@ -91,8 +102,9 @@
       font-family: 'CompassSans-Regular','Gordita-Medium';
       color: #224a69;
     }
+
     @media (max-width: 800px) {
-      display: flex;
+      display: none;
     }
   }
 
@@ -114,7 +126,7 @@
       overflow: hidden;
       display: -webkit-box;
       text-overflow: ellipsis;
-      @media(max-width: 800px) {
+      @media(max-width: 600px) {
         font-size: 0.8em;
         margin: 5px 0;
         display: -webkit-box;
