--- a/src/less/post.less
+++ b/src/less/post.less
@@ -36,7 +36,7 @@
 	.post-title {
 		text-align: left;
 		width: 100%;
-		margin: 0;
+		margin: 20px 80px 10px;
 		line-height: 1.2;
 		display: block;
 		font-family: 'HackerSans-Medium', 'CompassSans-Medium' !important;
@@ -51,8 +51,11 @@
 		}
 		@media(max-width: 600px) {
 			font-size: 1.7em;
-			max-width: 95%;
-			margin: auto;
+			max-width: auto;
+			margin: 25px 25px 10px;
+			width: -webkit-fill-available;
+			letter-spacing: 1px;
+			font-weight: 600;
 		}
 
 		a {
@@ -68,8 +71,7 @@
 	.excerpt {
 		font-weight: 100;
 		font-size: 1.4em;
-		margin-top: 10px;
-		margin-bottom: 0;
+		margin: 10px 80px 25px;
 		line-height: 1.2;
 		color: @h1-color;
 		font-family: 'HackerSans-Medium', 'CompassSans-Regular';
@@ -84,6 +86,7 @@
 			font-size: 1.1em;
 			font-family: CompassSans-Medium;
 			max-width: 95%;
+			margin: 0 25px;
 		}
 	}
 
@@ -308,7 +311,7 @@
 				margin: 0 35px !important;
 			}
 			@media(max-width: 600px) {
-				margin: 0 20px !important;
+				padding: 15px 0 !important;
 			}
 
 			.post-meta {
@@ -323,7 +326,7 @@
 					padding: 0;
 					max-width: none;
 					width: auto;
-					margin: 0 10px 15px;
+					margin: 0 2px 0;
 					padding-top: 0;
 					justify-content: space-between;
 				}
@@ -670,6 +673,8 @@
 
 	.featured-media {
 		line-height: 1;
+		margin: 10px 80px 5px;
+		    margin: 20px 80px 10px;
 		@media(max-width: 800px) {
 			margin: 40px 40px 0;
 		}
@@ -870,10 +875,7 @@
 		box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
 		display: flex;
 		justify-content: space-between;
-		@media(max-width: 1000px) {
-			padding: 30px 40px;
-			margin: 20px 0 0;
-		}
+
 		@media(max-width: 600px) {
 			padding: 30px;
 		}
