post layout changes

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -35,8 +35,8 @@
 
 	.post-title {
 		text-align: left;
-		width: 100%;
-		margin: 20px 80px 10px;
+		width: -webkit-fill-available;
+		margin: 30px 80px 10px;
 		line-height: 1.2;
 		display: block;
 		font-family: 'HackerSans-Medium', 'CompassSans-Medium' !important;
@@ -315,7 +315,7 @@
 			}
 
 			.post-meta {
-				margin: 0 0 15px;
+				margin: 0;
 				color: #40627b;
 				font-size: 12px;
 				display: flex;
