--- a/src/less/code.less
+++ b/src/less/code.less
@@ -10,6 +10,7 @@
     padding: 0 !important;
     margin-top: 30px;
     margin-bottom: 30px;
+    border-radius: 5px;
     @media(max-width: 600px) {
       margin-left: calc(~"-50vw + 50%") !important;
       margin-right: calc(~"-50vw + 50%") !important;
