--- a/src/less/post.less
+++ b/src/less/post.less
@@ -15,7 +15,7 @@
 		}
 
 		article {
-			margin: 5vw auto 0;
+			margin: 0 auto 0;
 			box-shadow: @shadow-color;
 			@media(max-width: 800px) {
 				margin: 0;
@@ -36,12 +36,12 @@
 	.post-title {
 		text-align: left;
 		width: -webkit-fill-available;
-		margin: 30px 80px 10px;
+		margin: 40px 80px 10px;
 		line-height: 1.2;
 		display: block;
 		font-family: 'HackerSans-Medium', 'CompassSans-Medium' !important;
 		font-size: 2.5em;
-		font-weight: 500;
+		font-weight: 600;
 		color: @h1-color;
 		@media(max-width: 800px) {
 			font-weight: 500;
