--- a/src/less/article-preview.less
+++ b/src/less/article-preview.less
@@ -2,7 +2,7 @@
 
 .article-preview {
   background: white;
-  max-width: 32%;
+  width: 32%;
   transition: all 0.3s ease-out;
   position: relative;
   height: 300px !important;
@@ -76,7 +76,7 @@
       position: relative;
       span {
         font-family: 'CompassSans-Regular','Gordita-Regular', 'Gordita-Light' !important;
-        color: #627d90;
+        color: #435663;
         line-height: 1;
         overflow: hidden;
         white-space: nowrap;
