--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -35,6 +35,7 @@
 			overflow: hidden;
 			-webkit-line-clamp: 3;
 			-webkit-box-orient: vertical;
+			 text-overflow: ellipsis;
 			font-family: 'Gordita-Regular',sans-serif !important;
 			line-height: 1.55;
 			font-size: .9em;
