--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -30,6 +30,10 @@
 		line-height: 1.3;
 		margin: 17px 3px 15px;
 
+		& > p {
+			display: none;
+		}
+
 		p:first-child {
 			display: -webkit-box;
 			overflow: hidden;
