--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -33,6 +33,7 @@
 			align-items: center;
 			padding: 17px 5%;
 			width: 90%;
+			color: #234969;
 			font-size: 1em;
 			font-family: 'CompassSans-Light',Gordita-Light,sans-serif!important;
 			font-weight: 200;
