post style tweaks

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -8,10 +8,11 @@
     position: relative;
     overflow-y: hidden;
     padding: 0 !important;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin: 30px auto;
     border-radius: 5px;
+    max-width: 90%;
     @media(max-width: 600px) {
+      max-width: none;
       margin-left: calc(~"-50vw + 50%") !important;
       margin-right: calc(~"-50vw + 50%") !important;
       width: auto !important;
