--- a/src/less/post.less
+++ b/src/less/post.less
@@ -536,13 +536,15 @@
 		blockquote {
 			border-left: 4px solid #26a2c7;
 			background: #e0eef3;
+			color: #32687b;
 			padding: 20px;
-			font-family: Gordita-Regular,sans-serif;
+			font-family: 'Gordita-Regular',sans-serif;
 			font-style: normal;
-			font-size: 0.9em;
+			font-size: 1em;
 			line-height: 1.6;
 			overflow: hidden;
 			margin: 20px 0;
+			font-style: italic;
 
 			* {
 				font-family: Gordita-Regular,sans-serif;
@@ -814,6 +816,7 @@
 .post-template {
 	figure {
 		width: fit-content;
+		max-width: 90%;
 		margin: 30px auto 30px;
 		overflow: visible;
 		box-shadow: 1px 0px 1px rgba(154, 154, 165, 0.27);
