--- a/src/less/table.less
+++ b/src/less/table.less
@@ -6,16 +6,16 @@ table, th, td {
 }
 
 table {
-  width:100%;
+  width:90%;
   display: table;
   border-collapse: collapse;
   border-spacing: 0;
-  margin: 20px 0 40px;
+  margin: 20px auto 40px;
   box-shadow: 1px 1px 4px #dbddec;
   border: 1px solid rgba(77, 87, 109, 0.25);
 
   @media(max-width: 600px) {
-    /*display: block !important;*/
+    width:100%;
   }
 
   &.left {
