--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -64,7 +64,7 @@
 
   .nosql {
     color: #6eb14a !important;
-    background-color: #E2EFE6;
+    background-color: #dbf7e4;
 
     * {
       color: #6eb14a !important;
