--- a/src/less/article-preview.less
+++ b/src/less/article-preview.less
@@ -48,8 +48,9 @@
 
   .related-title {
     line-height: 1.2 !important;
-    font-size: 1.1em !important;
+    font-size: 1.2em !important;
     margin-top: 0 !important;
+    min-height: 42px;
   }
 
   .author-mobile {
@@ -59,8 +60,8 @@
     display: flex;
 
     img {
-      width: 50px;
-      height: 50px;
+      width: 45px;
+      height: 45px;
       margin-right: 10px;
 
       @media(max-width: 600px) {
@@ -87,7 +88,7 @@
       .mobile-name {
         font-weight: 600;
         margin-bottom: 5px;
-        font-size: 1.2em;
+        font-size: 1.1em;
       }
 
       .mobile-date {
