--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -21,10 +21,10 @@
 			text-rendering: auto;
 			-webkit-font-smoothing: antialiased;
 			right: 17px;
-			top: 13px;
+			top: 14px;
 			position: absolute;
-			color: #9aa1bd;
-			font-size: 1em;
+			color: #aeb4cc;
+			font-size: 1.2em;
 		}
 
 		#my-custom-input {
@@ -319,7 +319,7 @@
 				display: inline-block;
 				align-items: center;
 				display: flex;
-				padding: 0 0 12px!important !important;
+				padding: 0 0 12px !important;
 
 				&:last-of-type {
 					border-bottom: 0;
