--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -30,7 +30,7 @@
 		line-height: 1.3;
 		margin: 17px 3px 15px;
 
-		& > p {
+		& > * {
 			display: none;
 		}
 
@@ -60,7 +60,7 @@
 
 	.featured-media {
 		box-sizing: border-box;
-		max-height: 350px;
+		max-height: 380px;
 		height: 48vw;
 		display: block;
 		margin: auto;
@@ -374,6 +374,7 @@
 		padding: 14px 20px;
 		line-height: 1;
 		height: 14px;
+		font-weight: 600;
 		background: @button-color;
 		border-bottom: 1px solid #009c83;
 		border-right: 2px solid #009c83;
