post preview issue, author pages

--- a/partials/widget-authorwebsite.hbs
+++ b/partials/widget-authorwebsite.hbs
@@ -1,10 +1,10 @@
 <!-- start widget -->
 
+<a href="{{website}}">
+  <div class="widget author-website" style="0">
 
-<div class="widget author-website" style="0">
-
-</div>
-
+  </div>
+</a>
 
 <script>
 
