--- a/src/less/author.less
+++ b/src/less/author.less
@@ -272,8 +272,9 @@
 			position: absolute;
 			background-image: linear-gradient(to bottom, transparent 0%, @theme-color 100%);
 			height: 100%;
-			width: 100%;
+			width: 105%;
 			top: 0;
+			left: 0;
 			content: '';
 		}
 	}
