--- a/src/less/githubcard.less
+++ b/src/less/githubcard.less
@@ -36,6 +36,8 @@
     display: flex;
     justify-content: space-between;
     list-style: none;
+    margin-top: 5px;
+
     @media(max-width: 800px) {
       margin: 0;
       padding: 15px;
@@ -76,8 +78,8 @@
     font-size: 0.8em;
     color: white;
     float: left;
-    padding: 10px 14px;
-    line-height: 1;
+    padding: 6px 14px;
+    line-height: 1.3;
     background: @theme-color;
     transition: 0.2s all easeout;
     @media(max-width: 800px) {
@@ -160,10 +162,11 @@
       border-top: 0;
       width: auto;
       transition: 0.2s all easeout;
-      background-color: #f1f0f5;
+      background-color: #f7f7fb;
       padding: 10px 16px;
       transition: 0.2s all easeout;
-      border-bottom: 1px solid #dedede;
+      border-bottom: 1px solid #d1d7dc;
+      border-right: 1px solid #d1d7dc;
       border-left: 0;
 
       &:hover {
