newsletter id issue

--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -15,7 +15,7 @@
 	{{^is "author"}}
 		{{> widget-social}}
 		{{> widget-tagcloud}}
-		{{> widget-sendgrid}}
+		{{> widget-sidebarnewsletter}}
 	{{/is}}
 	{{#is "home"}}
 		{{> widget-series}}
