--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -2,7 +2,7 @@
 <footer class="main-footer">
 	<div class="footer-container">
 		<!-- start first footer widget area -->
-		{{> widget-sendgrid}}
+		{{> widget-footernewsletter}}
 		<!-- end first footer widget area -->
 		<!-- start second footer widget area -->
 		{{> widget-authors}}
