--- a/default.hbs
+++ b/default.hbs
@@ -14,7 +14,9 @@
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}">
 	{{! Scripts }}
 	<script type="text/javascript" src="{{@blog.url}}/public/ghost-sdk.min.js"></script>
+	<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.8/stitch.js"></script>
 	<script async src="{{asset "/js/includes/jquery.min.js"}}"></script>
+	{{> mongodb}}
 
 	{{#is "post"}}
 		<meta property="og:image" content="{{img_url feature_image}}">
