--- a/custom-signup-confirm.hbs
+++ b/custom-signup-confirm.hbs
@@ -53,11 +53,20 @@
     .then(() => displayResult('success'))
     .catch(err => displayResult('error', err))
 
+
+	function success(){
+		message.innerText = "Successfully created user. You may close this page.";
+		return emailPasswordClient.confirmUser(token, tokenId);
+	}
+
+	function failure(){
+
+	}
+
   function displayResult(result, err) {
     const message = document.getElementById("message");
     if (result === "success") {
-      message.innerText = "Successfully created user. You may close this page.";
-			return emailPasswordClient.confirmUser(token, tokenId);
+      success();
     }
     else if (result === "error") {
       message.innerText = "Unable to register user.\n\n" + err;
