--- a/custom-signup-confirm.hbs
+++ b/custom-signup-confirm.hbs
@@ -66,7 +66,7 @@
   function displayResult(result, err) {
     const message = document.getElementById("message");
     if (result === "success") {
-			emailPassClient.confirmUser(token, tokenId);
+			emailPasswordClient.confirmUser(token, tokenId);
       success();
     }
     else if (result === "error") {
